fixed whitespace

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 
 h1 {
     text-align: center;
+    margin: 0;
 
 }
 
@@ -19,7 +20,6 @@ h1 > div {
     background-color: rgb(113, 133, 113);
     color:rgb(238, 238, 238);
     padding: 15px;
-    margin: 0;
 }
 
 h1 > p {
@@ -38,10 +38,6 @@ h1 button {
 
 
 
-
-
-
-
 body > div {
     padding-left: 70px;
     padding-top: 20px;
@@ -57,8 +53,4 @@ img {
 
 h5 {
     margin: 5px;
-}
-
-div > p {
-    /* line-height: 10px; */
 }
